# public/swagger.json
@@ -222,6 +222,46 @@
           }
         }
       }
+    },
+    "/api/task": {
+      "post": {
+        "tags": [
+          "api"
+        ],
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "OAuth token",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "request body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/CreateTaskSchema"
+            }
+          }
+
+        ],
+        "responses": {
+          "200": {
+            "description": "OK."
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -273,6 +313,20 @@
         },
         "gender": {
           "type": "string"
+        }
+      }
+    },
+    "CreateTaskSchema": {
+      "type": "object",
+      "required": [
+        "title","desc"
+      ],
+      "properties": {
+        "name": {
+          "title": "string"
+        },
+        "gender": {
+          "desc": "string"
         }
       }
     }
